welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: reassignment to val
      i= decalage+i
       ^